--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -3,13 +3,13 @@ spring:
 #配置数据库spring:
   datasource:
       driver-class-name: com.mysql.jdbc.Driver
-      url: jdbc:mysql://localhost:3306/blog?useUnicode=true&characterEncoding=UTF-8
+      url: jdbc:mysql://47.114.37.215:3306/blog?useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2B8
       username: root
-      password: pyb
+      password: pybhh
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
 server:
-  port: 8081
+  port: 8080
 
