--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -2,7 +2,7 @@
 spring:
 #配置数据库spring:
   datasource:
-      driver-class-name: com.mysql.jdbc.Driver
+      driver-class-name: com.mysql.cj.jdbc.Driver
       url: jdbc:mysql://47.114.37.215:3306/blog?useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2B8
       username: root
       password: pybhh
@@ -11,5 +11,5 @@ spring:
       ddl-auto: update
     show-sql: true
 server:
-  port: 8080
+  port: 8081
 
